Content overlaping issue fix 1

--- a/public/style.css
+++ b/public/style.css
@@ -223,7 +223,7 @@ section {
   font-size: 3rem;
 }
 
-.dev-icons .list-inline-item i:hover {
+.list-inline-item i:hover {
   color: #b73434;
 }
 
@@ -249,7 +249,7 @@ section.resume-section .resume-item .resume-date {
   }
   .resume-item {
     flex-direction: row;
-    /* justify-content: space-between !important; */
+    justify-content: space-between !important;
     margin-bottom: 0;
   }
   .resume-date {
@@ -279,20 +279,3 @@ a:focus,
 a:active {
   color: red;
 }
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-/* @media only screen and (max-width: 600px) {
-  nav {
-    width: 100%;
-    height: auto;
-  }
-  nav {
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-  }
-
-  section.resume-section {
-    padding: 2rem !important;
-  }
-} */
